# LMCache-Ascend

./: setup.py
csrc/: CMakeLists.txt  pybind.cpp
csrc/hccl/: CMakeLists.txt  bindings.cpp  hccl_agent.cpp  hccl_agent.h  hccl_utils.cpp  hccl_utils.h
docker/: vllm-sched.diff  vllm-utils.diff
examples/disagg_prefill/1p1d/: README.md
examples/disagg_prefill/1p1d/configs/: lmcache-decoder-config.yaml  lmcache-prefiller-config.yaml
examples/kv_cache_reuse/share_across_instances/p2p_sharing/: README.md  example1.yaml  example2.yaml
lmcache_ascend/: __init__.py
lmcache_ascend/integration/vllm/: vllm_v1_adapter.py
lmcache_ascend/v1/transfer_channel/: __init__.py  hccl_channel.py
tests/disagg/: test_hccl_channel_write.py
